[tool.poetry]
name = "finalproject_Shchepilov_M25-555"
version = "0.1.0"
description = "ValutaTrade Hub - консольное приложение для получения и кэширования курсов валют, а также симуляции операций покупки и продажи"
authors = ["sh1v <sh1vvv@yandex.ru>"]
readme = "README.md"
packages = [{ include = "valutatrade_hub" }]

[tool.poetry.dependencies]
python = ">=3.14"
prettytable = ">=3.17.0,<4.0.0"
requests = ">=2.32.5,<3.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.10,<0.15.0"

[tool.poetry.scripts]
project = "main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.valutatrade]
RATES_TTL_SECONDS = 300
BASE_CURRENCY = "USD"